@@ -198,6 +198,12 @@ $(po_document_dir)/po_document/$(PACKAGE)_document.pot:
 	  cd $(po_document_dir)/po_document && $(MAKE) $(AM_MAKEFLAGS) update-po; \
 	fi
 
+# notice the 
+#     cat $< | sed -e 's/charset=CHARSET/charset=ascii/'
+# Indeed $(po_document_dir)/po_document/$(PACKAGE)_document.pot is 
+# autogenerated with charset CHARSET (and no command line option for 
+# xgettext to change it), and msgexec doesn't like it and don't do anything.
+# msgexec: present charset "CHARSET" is not a portable encoding name
 i18n/en.thl i18n/: $(po_document_dir)/po_document/$(PACKAGE)_document.pot
 	$(MKDIR_P) i18n
 	if test '$(USE_NLS)' = 'yes'; then \
@@ -205,7 +211,7 @@ i18n/en.thl i18n/: $(po_document_dir)/po_document/$(PACKAGE)_document.pot
 		test "$$lang" = 'en' && continue; \
 		msgexec -i "$$file" "$(srcdir)/gettext_to_separated.pl" | "$(srcdir)/separated_to_hash.pl" $$lang > i18n/$$lang.thl; \
 	  done; \
-	  msgexec -i $< "$(srcdir)/gettext_to_separated.pl" | "$(srcdir)/separated_to_hash.pl" en > i18n/en.thl; \
+	  cat $< | sed -e 's/charset=CHARSET/charset=ascii/' | msgexec "$(srcdir)/gettext_to_separated.pl" | "$(srcdir)/separated_to_hash.pl" en > i18n/en.thl; \
 	else \
 	  cp -p i18n_ref/*.thl i18n; \
 	fi
